--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
 :root {
-  --clr-primary-light-red: hsl(0, 100%, 67%);
-  --clr-primary-orangey-yellow: hsl(39, 100%, 56%);
-  --clr-primary-green-teal: hsl(166, 100%, 37%);
-  --clr-primary-cobalt-blue: hsl(234, 85%, 45%);
+  --clr-primary-light-red: 0 100% 67%;
+  --clr-primary-orangey-yellow: 39 100% 56%;
+  --clr-primary-green-teal: 166 100% 37%;
+  --clr-primary-cobalt-blue: 234 85% 45%;
 
   --grad-light-slate-blue: hsl(252, 100%, 67%);
   --grad-light-royal-blue: hsl(241, 81%, 54%);
@@ -14,7 +14,7 @@
   --clr-neutral-light-lavender: hsl(241, 100%, 89%);
   --clr-neutral-dark-gray-blue: hsl(224, 30%, 27%);
 
-  --ff-primary: 'Hanken Grotesk', sans-serif;
+  --ff-primary: "Hanken Grotesk", sans-serif;
 
   --fw-medium: 500;
   --fw-bold: 700;
@@ -31,8 +31,22 @@
 
 body {
   width: 100vw;
+  height: 100vh;
   font-family: var(--ff-primary);
+}
+main {
+  background-color: var(--clr-neutral-pale-blue);
+  height: 100%;
+}
 
+main > section:nth-of-type(2) {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 32px;
+  width: 100%;
+  background-color: var(--clr-neutral-white);
+  border-radius: 30px;
 }
 
 section:first-of-type {
@@ -40,30 +54,35 @@ section:first-of-type {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to bottom, var(--grad-light-slate-blue), var(--grad-light-royal-blue));
+  background: linear-gradient(
+    to bottom,
+    var(--grad-light-slate-blue),
+    var(--grad-light-royal-blue)
+  );
   border-radius: 0 0 32px 32px;
   padding: 20px;
-
 }
-
 
 section:first-of-type div:first-of-type {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to top, var(--grad-persian-blue-circle), var(--grad-violet-blue-circle));
+  background: linear-gradient(
+    to top,
+    var(--grad-persian-blue-circle),
+    var(--grad-violet-blue-circle)
+  );
   width: 150px;
   height: 150px;
   border-radius: 50%;
   color: var(--clr-neutral-white);
   font-weight: var(--fw-extra-bold);
   margin: 16px 0;
-
 }
 
 h1 {
-  color: var(--clr-neutral-pale-blue);
+  color: var(--clr-neutral-light-lavender);
   font-size: 16px;
 }
 
@@ -71,19 +90,106 @@ h2 {
   color: var(--clr-neutral-white);
 }
 
-p {
-  color: var(--clr-neutral-light-lavender);
-  font-size: 18px;
-  padding: 10px;
-  line-height: 24px;
+h3 {
+  margin-bottom: 12px;
 }
 
+p {
+  color: var(--clr-neutral-light-lavender);
+  font-size: 16px;
+  padding: 10px;
+  line-height: 20px;
+  margin: 0 10px 0 42px;
+}
 
-div>:nth-child(1) {
+table {
+  border-collapse: separate;
+  border-spacing: 0px 10px;
+}
+
+td {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+tr {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 12px;
+  padding: 16px;
+  margin: 10px 0;
+}
+
+tr:nth-child(1) {
+  background-color: hsl(var(--clr-primary-light-red) / 0.05);
+  color: hsl(var(--clr-primary-light-red));
+  font-weight: var(--fw-bold);
+}
+
+tr:nth-child(2) {
+  background-color: hsl(var(--clr-primary-orangey-yellow) / 0.1);
+  color: hsl(var(--clr-primary-orangey-yellow));
+  font-weight: var(--fw-bold);
+}
+
+tr:nth-child(3) {
+  background-color: hsl(var(--clr-primary-green-teal) / 0.05);
+  color: hsl(var(--clr-primary-green-teal));
+  font-weight: var(--fw-bold);
+}
+
+tr:nth-child(4) {
+  background-color: hsl(var(--clr-primary-cobalt-blue) / 0.05);
+  color: hsl(var(--clr-primary-cobalt-blue));
+  font-weight: var(--fw-bold);
+}
+div > :nth-child(1) {
   font-size: 46px;
 }
 
-div>:nth-child(2) {
+div > :nth-child(2) {
   color: var(--clr-neutral-light-lavender);
-  font-weight: 100;
+  font-weight: var(--fw-bold);
+  font-size: 16px;
+}
+
+button {
+  background-color: var(--clr-neutral-dark-gray-blue);
+  color: white;
+  border: none;
+  border-radius: 30px;
+  padding: 20px;
+  font-size: 18px;
+  font-family: var(--ff-primary);
+  margin-top: 30px;
+}
+
+button:hover {
+  background-color: var(--grad-light-royal-blue);
+}
+
+@media (min-width: 1280px) {
+  main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+  }
+
+  section:first-of-type {
+    width: 18%;
+    height: 55%;
+    border-radius: 30px;
+    position: relative;
+    z-index: 2;
+    margin-right: -30px;
+  }
+
+  main > section:nth-of-type(2) {
+    width: 20%;
+    z-index: 1;
+    height: 55%;
+    padding-left: 60px;
+  }
 }
